App working with handlebar as templating engine

--- a/layouts/article.html
+++ b/layouts/article.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Contentful Blog Example space</title>
-  <meta name="description" content="">
+  <title>{{ title }}</title>
+  <meta name="description" content="{{ description }}">
   <meta name="author" content="Contentful">
   <link rel="stylesheet" href="/style/main.css?v=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
   <h1>
-    
+    {{data.fields.heading}}
   </h1>
 </body>
 </html>
