--- a/layouts/article.html
+++ b/layouts/article.html
@@ -13,8 +13,8 @@
     {{#if data.fields.heading}}
       <h1>{{data.fields.heading}}</h1>
     {{/if}}
-    {{#if data.fields.sub_heading}}
-      <h2>{{data.fields.sub_heading}}</h2>
+    {{#if data.fields.subHeading}}
+      <h2>{{data.fields.subHeading}}</h2>
     {{/if}}
     {{#if data.fields.content}}
       {{data.fields.content}}
